--- a/src/sass/modules/_all-modules.scss
+++ b/src/sass/modules/_all-modules.scss
@@ -14,6 +14,7 @@
 @import "data-form";
 @import "slide-show";
 @import "./search-bar/search-bar";
+@import "./animated/background";
 @import "flexbox-table"	;
 @import "./shopping-cart/cart";
 @import "./shopping-cart/card";
