--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1063,6 +1063,79 @@ input[type="search"] {
     opacity: 0;
     cursor: pointer; }
 
+.milkwayContainer {
+  position: relative;
+  display: block;
+  background-color: #000;
+  width: 100%;
+  height: 300px;
+  overflow: hidden; }
+  @media (min-width: 54.875rem) {
+    .milkwayContainer {
+      height: 400px; } }
+
+.milkwayContainer > * {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 300px;
+  -webkit-transform-origin: 50% 50%;
+          transform-origin: 50% 50%;
+  background-image: -webkit-radial-gradient(2px 2px at 40px 60px, #ccc, transparent), -webkit-radial-gradient(2px 2px at 20px 50px, #ddd, transparent), -webkit-radial-gradient(2px 2px at 30px 100px, #eee, transparent), -webkit-radial-gradient(2px 2px at 40px 60px, #fff, transparent), -webkit-radial-gradient(2px 2px at 110px 90px, #ccc, transparent), -webkit-radial-gradient(2px 2px at 190px 150px, #ddd, transparent);
+  background-image: radial-gradient(2px 2px at 40px 60px, #ccc, transparent), radial-gradient(2px 2px at 20px 50px, #ddd, transparent), radial-gradient(2px 2px at 30px 100px, #eee, transparent), radial-gradient(2px 2px at 40px 60px, #fff, transparent), radial-gradient(2px 2px at 110px 90px, #ccc, transparent), radial-gradient(2px 2px at 190px 150px, #ddd, transparent);
+  background-repeat: repeat;
+  background-size: 200px 200px;
+  -webkit-animation-name: movingStars;
+          animation-name: movingStars;
+  -webkit-animation-iteration-count: infinite;
+          animation-iteration-count: infinite;
+  -webkit-animation-timing-function: linear;
+          animation-timing-function: linear; }
+  @media (min-width: 54.875rem) {
+    .milkwayContainer > * {
+      height: 400px; } }
+
+.milkwayContainer span:nth-child(1) {
+  -webkit-animation-duration: 7s;
+          animation-duration: 7s; }
+
+.milkwayContainer span:nth-child(2) {
+  -webkit-animation-duration: 14s;
+          animation-duration: 14s; }
+
+.milkwayContainer span:nth-child(3) {
+  -webkit-animation-duration: 21s;
+          animation-duration: 21s; }
+
+.milkwayContainer span:nth-child(4) {
+  -webkit-animation-duration: 28s;
+          animation-duration: 28s; }
+
+.milkwayContainer span:nth-child(5) {
+  -webkit-animation-duration: 35s;
+          animation-duration: 35s; }
+
+.milkwayContainer span:nth-child(6) {
+  -webkit-animation-duration: 42s;
+          animation-duration: 42s; }
+
+@-webkit-keyframes movingStars {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+
+@keyframes movingStars {
+  from {
+    -webkit-transform: rotate(0deg);
+            transform: rotate(0deg); }
+  to {
+    -webkit-transform: rotate(360deg);
+            transform: rotate(360deg); } }
+
 .tableRow {
   display: -webkit-box;
   display: -ms-flexbox;
