--- a/src/sass/modules/_data-form.scss
+++ b/src/sass/modules/_data-form.scss
@@ -117,5 +117,57 @@
   }
 }
 
+.formSelect {
+  appearance: none;
+  border-style: none;
+  border-radius: 0;
+  display: inline-block;
+  font: inherit;
+  line-height: 1.5em;
+  padding: 6px 3.5em 6px 5px;
+  margin: 0 2px 0 2px;   
+
+  background-color: #fff;
+  color: #646464;
+  font-family: "Source Sans Pro", Helvetica, sans-serif;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 1.75;
+  width: 100%;
+}
+
+select.formSelect {
+  background-image:
+    linear-gradient(45deg, transparent 50%, #333 50%),
+    linear-gradient(135deg, #333 50%, transparent 50%),
+    linear-gradient(to right, white, white);
+  background-position:
+    calc(100% - 20px) calc(1em + 2px),
+    calc(100% - 15px) calc(1em + 2px),
+    100% 0;
+  background-size:
+    5px 5px,
+    5px 5px,
+    2.5em 2.5em;
+  background-repeat: no-repeat;
+}
+
+select.formSelect:focus {
+  background-image:
+    linear-gradient(45deg, #333 50%, transparent 50%),
+    linear-gradient(135deg, transparent 50%, #333 50%),
+    linear-gradient(to right, white, white);
+  background-position:
+    calc(100% - 15px) 1em,
+    calc(100% - 20px) 1em,
+    100% 0;
+  background-size:
+    5px 5px,
+    5px 5px,
+    2.5em 2.5em;
+  background-repeat: no-repeat;
+  border-color: grey;
+  outline: 0;
+}
 
 
